--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@pinata/sdk": "^1.1.25",
+    "@signumart/massup": "file:signumart-massup-1.0.0-beta.tgz",
     "@signumjs/core": "^1.0.0-rc.17",
     "@signumjs/crypto": "^1.0.0-rc.17",
     "@signumjs/http": "^1.0.0-rc.17",
