--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "test:ci": "jest --runInBand --silent",
     "clean": "rm -rf dist/*",
     "build": "npm run clean && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
-    "build:prod": "npm run clean && tsc -p tsconfig.prod.json && tsc-alias -p tsconfig.json"
+    "build:prod": "npm run clean && tsc -p tsconfig.prod.json && tsc-alias -p tsconfig.json",
+    "prepublish": "npm run build:prod"
   },
   "repository": {
     "type": "git",
