--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "clean": "rm -rf dist/*",
     "build": "npm run clean && tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "build:prod": "npm run clean && tsc -p tsconfig.prod.json && tsc-alias -p tsconfig.json",
-    "prepublish": "npm run build:prod"
+    "dist": "npm run build:prod && npm publish"
   },
   "repository": {
     "type": "git",
